--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    def accompanist_version = "0.24.1-alpha"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
+
+    implementation("androidx.navigation:navigation-compose:2.5.0-alpha01")
+
+    def koin_version = "3.1.5"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+
+    implementation("io.coil-kt:coil-compose:1.4.0")
+
 }
